feat: implement getNftById
